test-data/compiletest-rs/ui/macros/unreachable-static-msg.run.stderr
thread 'main' panicked at 'internal error: entered unreachable code: uhoh', ui/macros/unreachable-static-msg.rs:6:5
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
