test-data/compiletest-rs/ui/macros/unreachable-static-msg.mir
// WARNING: This output format is intended for human consumers only
// and is subject to change without notice. Knock yourself out.
fn main() -> () {
    let mut _0: ();
    let _1: !;
    let _2: &&str;
    let _3: &str;

    bb0: {
        _3 = const "uhoh";
        _2 = &_3;
        _1 = core::panicking::unreachable_display::<&str>(_2);
    }
}
